changed modal styling to fix spacing and use open_radix colors

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -1,3 +1,15 @@
-.modal-dialog {
-  background-color: ;
+.modal-content {
+  background-color: rgba(56, 56, 56, 0.99);
+}
+
+.modal-header {
+  color: white;
+}
+
+.modal-body {
+  color: white;
+}
+
+#exampleModalLabel {
+  color: white;
 }
